--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    
+
+    <!-- Local Stylsheet -->
+    <link rel="stylesheet" href="static/styles/styles.css">
+
     <title>Belly Button Biodiversity</title>
   </head>
   <body>
@@ -62,6 +66,41 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="static/javascript/script.js"></script>
+    <script>
+    // here just doing the script inside html, will move
+    // it out later, browser is cacheing old copies if i 
+    // separate it
+    var sample1 = 'BB_940'
+    var samples_url = 'http://127.0.0.1:5000/samples/'
+
+
+    Plotly.d3.json((samples_url + sample1), function(error, response) {
+        if (error) console.warn(error)
+        console.log(response)
+        console.log(response[0].sample_values.slice(0,10))
+        console.log(response[0].otu_ids.slice(0,10))
+
+        var trace1 = {
+            values: response[0].sample_values.slice(0,10),
+            labels: response[0].otu_ids.slice(0,10),
+            type: 'pie',
+            hovertext: // put phylum here, request api
+        }
+
+        var layout = {
+            title: "Top 10 Bacteria"
+        }
+
+        var data = [trace1]
+
+        Plotly.plot('pie_chart', data, layout)
+
+    })
+    
+    
+    
+    </script>
   </body>
 </html>
