changed plot sizes

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,9 @@
         }
 
         var pielayout = {
-            title: "Top 10 Bacteria in Sample " + sample1
+            title: "Top 10 Bacteria in Sample " + sample1,
+            width: 500,
+            height: 500
         }
 
         var piedata = [pietrace]
@@ -137,7 +139,9 @@
         }
 
         var bubblelayout = {
-            title: 'Bubble Plot'
+            title: 'Bubble Plot',
+            width: 1100,
+            height: 600
         }
         
         var bubbledata = [bubbletrace]
